[project]
name = "levels-fyi-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fake-useragent>=2.2.0",
    "fastmcp>=3.2.4",
    "pycryptodome>=3.23.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
